# Rust_project

./: README.md
Lesson1/src/: main.rs
cli_text_manipulation/src/: main.rs
cli_text_manipulation/src/modules/: my_funcs.rs
lesson2/: Cargo.toml
lesson2/src/: main.rs
lesson2/src/modules/: mod.rs  my_funcs.rs
server-client/: Cargo.toml
server-client/src/: main.rs
server-client/src/modules/: client.rs  server.rs
server-client/sta-client/: Cargo.toml  readme.md
server-client/sta-client/src/: lib.rs
server-client/sta-server/: Cargo.toml
server-client/sta-server/src/: lib.rs
