[package]
name = "lesson2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slug = "0.1.5"
clap = { version = "4.5.4", features = ["derive"] }
clap_derive = "4.5.4"
csv = "1.3.0"
prettytable-rs = "0.10.0"